i211104_kubernetes/i211104_namespace_deployment.yaml
# namespace: production
apiVersion: v1
kind: Namespace
metadata:
  name: production
