i211104_kubernetes/i211104_client_deployment.yaml
# Client Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: moizbhai97/client:latest
        ports:
        - containerPort: 80
---

# Client Service
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: production
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 11104 # My roll number with 1 in start
      targetPort: 80
