i211104_kubernetes/i211104_ingress_deployment.yaml
# Client Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/custom-http-errors: '404'
    nginx.ingress.kubernetes.io/default-backend: client
spec:
  rules:
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client
            port:
              number: 11104

---

# Microservices Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: auth.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: auth
            port:
              number: 13104
  - host: classrooms.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: classrooms
            port:
              number: 13105
  - host: post.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: post
            port:
              number: 13107
